frontend/test/should_fail/array_006.grg
using array_model_002;

rule assignArrayToArray {
	a:A -e:E-> a; 
		
	modify {
		eval {
			a.niceArray = e.spiceArray;
		}
	}
}